refactor: code refactor and type addition

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -21,9 +21,9 @@
   
     <div class="product-list">
       <div class="product-item" *ngFor="let product of filteredProducts" (click)="goToProductDetails(product.id)">
-        <p class="category">{{ product.category }}</p>
-        <p class="name">{{ product.name }}</p>
-        <p class="price">{{ product.price | currency: 'USD' }}</p>
+        <p class="category">{{ product?.category }}</p>
+        <p class="name">{{ product?.name }}</p>
+        <p class="price">{{ product?.price | currency: 'USD' }}</p>
       </div>
     </div>
   </section>
